; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_dtype_transfer.c_get_cast_transfer_function.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_dtype_transfer.c_get_cast_transfer_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32 }

@NPY_SUCCEED = common dso_local global i64 0, align 8
@NPY_FAIL = common dso_local global i32 0, align 4
@NPY_NEEDS_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, %struct.TYPE_12__*, %struct.TYPE_12__*, i32, i32**, i32**, i32*)* @get_cast_transfer_function to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_cast_transfer_function(i32 %0, i32 %1, i32 %2, %struct.TYPE_12__* %3, %struct.TYPE_12__* %4, i32 %5, i32** %6, i32** %7, i32* %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_12__*, align 8
  %15 = alloca %struct.TYPE_12__*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32**, align 8
  %18 = alloca i32**, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca i32*, align 8
  %23 = alloca i32*, align 8
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32*, align 8
  %28 = alloca i32*, align 8
  store i32 %0, i32* %11, align 4
  store i32 %1, i32* %12, align 4
  store i32 %2, i32* %13, align 4
  store %struct.TYPE_12__* %3, %struct.TYPE_12__** %14, align 8
  store %struct.TYPE_12__* %4, %struct.TYPE_12__** %15, align 8
  store i32 %5, i32* %16, align 4
  store i32** %6, i32*** %17, align 8
  store i32** %7, i32*** %18, align 8
  store i32* %8, i32** %19, align 8
  store i32* null, i32** %22, align 8
  store i32* null, i32** %23, align 8
  store i32 0, i32* %24, align 4
  %29 = load %struct.TYPE_12__*, %struct.TYPE_12__** %14, align 8
  %30 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  store i32 %31, i32* %25, align 4
  %32 = load %struct.TYPE_12__*, %struct.TYPE_12__** %15, align 8
  %33 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  store i32 %34, i32* %26, align 4
  %35 = load i32, i32* %11, align 4
  %36 = load i32, i32* %12, align 4
  %37 = load i32, i32* %13, align 4
  %38 = load %struct.TYPE_12__*, %struct.TYPE_12__** %14, align 8
  %39 = load %struct.TYPE_12__*, %struct.TYPE_12__** %15, align 8
  %40 = load i32, i32* %16, align 4
  %41 = load i32*, i32** %19, align 8
  %42 = call i64 @get_nbo_cast_transfer_function(i32 %35, i32 %36, i32 %37, %struct.TYPE_12__* %38, %struct.TYPE_12__* %39, i32 %40, i32** %20, i32** %21, i32* %41, i32* %24)
  %43 = load i64, i64* @NPY_SUCCEED, align 8
  %44 = icmp ne i64 %42, %43
  br i1 %44, label %45, label %47

45:                                               ; preds = %9
  %46 = load i32, i32* @NPY_FAIL, align 4
  store i32 %46, i32* %10, align 4
  br label %135

47:                                               ; preds = %9
  %48 = load i32, i32* %24, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %57, label %50

50:                                               ; preds = %47
  %51 = load i32*, i32** %20, align 8
  %52 = load i32**, i32*** %17, align 8
  store i32* %51, i32** %52, align 8
  %53 = load i32*, i32** %21, align 8
  %54 = load i32**, i32*** %18, align 8
  store i32* %53, i32** %54, align 8
  %55 = load i64, i64* @NPY_SUCCEED, align 8
  %56 = trunc i64 %55 to i32
  store i32 %56, i32* %10, align 4
  br label %135

57:                                               ; preds = %47
  %58 = load i32, i32* %11, align 4
  %59 = load i32, i32* %12, align 4
  %60 = load i32, i32* %25, align 4
  %61 = load %struct.TYPE_12__*, %struct.TYPE_12__** %14, align 8
  %62 = call i32 @PyArray_GetDTypeCopySwapFn(i32 %58, i32 %59, i32 %60, %struct.TYPE_12__* %61, i32** %27, i32** %22)
  %63 = load %struct.TYPE_12__*, %struct.TYPE_12__** %15, align 8
  %64 = call i32 @PyDataType_REFCHK(%struct.TYPE_12__* %63)
  %65 = icmp ne i32 %64, 0
  br i1 %65, label %72, label %66

66:                                               ; preds = %57
  %67 = load i32, i32* %11, align 4
  %68 = load i32, i32* %26, align 4
  %69 = load i32, i32* %13, align 4
  %70 = load %struct.TYPE_12__*, %struct.TYPE_12__** %15, align 8
  %71 = call i32 @PyArray_GetDTypeCopySwapFn(i32 %67, i32 %68, i32 %69, %struct.TYPE_12__* %70, i32** %28, i32** %23)
  br label %91

72:                                               ; preds = %57
  %73 = load %struct.TYPE_12__*, %struct.TYPE_12__** %15, align 8
  %74 = call i32 @PyDataType_ISNOTSWAPPED(%struct.TYPE_12__* %73)
  %75 = call i32 @assert(i32 %74)
  %76 = load i32*, i32** %19, align 8
  %77 = load i32, i32* %76, align 4
  %78 = call i32 @assert(i32 %77)
  %79 = load i32, i32* %11, align 4
  %80 = load i32, i32* %26, align 4
  %81 = load i32, i32* %13, align 4
  %82 = load %struct.TYPE_12__*, %struct.TYPE_12__** %15, align 8
  %83 = load %struct.TYPE_12__*, %struct.TYPE_12__** %15, align 8
  %84 = load i32*, i32** %19, align 8
  %85 = call i64 @PyArray_GetDTypeTransferFunction(i32 %79, i32 %80, i32 %81, %struct.TYPE_12__* %82, %struct.TYPE_12__* %83, i32 1, i32** %28, i32** %23, i32* %84)
  %86 = load i64, i64* @NPY_SUCCEED, align 8
  %87 = icmp ne i64 %85, %86
  br i1 %87, label %88, label %90

88:                                               ; preds = %72
  %89 = load i32, i32* @NPY_FAIL, align 4
  store i32 %89, i32* %10, align 4
  br label %135

90:                                               ; preds = %72
  br label %91

91:                                               ; preds = %90, %66
  %92 = load i32*, i32** %28, align 8
  %93 = icmp eq i32* %92, null
  br i1 %93, label %97, label %94

94:                                               ; preds = %91
  %95 = load i32*, i32** %27, align 8
  %96 = icmp eq i32* %95, null
  br i1 %96, label %97, label %105

97:                                               ; preds = %94, %91
  %98 = load i32*, i32** %21, align 8
  %99 = call i32 @NPY_AUXDATA_FREE(i32* %98)
  %100 = load i32*, i32** %22, align 8
  %101 = call i32 @NPY_AUXDATA_FREE(i32* %100)
  %102 = load i32*, i32** %23, align 8
  %103 = call i32 @NPY_AUXDATA_FREE(i32* %102)
  %104 = load i32, i32* @NPY_FAIL, align 4
  store i32 %104, i32* %10, align 4
  br label %135

105:                                              ; preds = %94
  %106 = load i32*, i32** %20, align 8
  %107 = load i32**, i32*** %17, align 8
  store i32* %106, i32** %107, align 8
  %108 = load i32, i32* %25, align 4
  %109 = load i32, i32* %26, align 4
  %110 = load i32*, i32** %27, align 8
  %111 = load i32*, i32** %22, align 8
  %112 = load i32*, i32** %28, align 8
  %113 = load i32*, i32** %23, align 8
  %114 = load i32*, i32** %20, align 8
  %115 = load i32*, i32** %21, align 8
  %116 = load %struct.TYPE_12__*, %struct.TYPE_12__** %15, align 8
  %117 = load i32, i32* @NPY_NEEDS_INIT, align 4
  %118 = call i32 @PyDataType_FLAGCHK(%struct.TYPE_12__* %116, i32 %117)
  %119 = load i32**, i32*** %17, align 8
  %120 = load i32**, i32*** %18, align 8
  %121 = call i64 @wrap_aligned_contig_transfer_function(i32 %108, i32 %109, i32* %110, i32* %111, i32* %112, i32* %113, i32* %114, i32* %115, i32 %118, i32** %119, i32** %120)
  %122 = load i64, i64* @NPY_SUCCEED, align 8
  %123 = icmp ne i64 %121, %122
  br i1 %123, label %124, label %132

124:                                              ; preds = %105
  %125 = load i32*, i32** %21, align 8
  %126 = call i32 @NPY_AUXDATA_FREE(i32* %125)
  %127 = load i32*, i32** %22, align 8
  %128 = call i32 @NPY_AUXDATA_FREE(i32* %127)
  %129 = load i32*, i32** %23, align 8
  %130 = call i32 @NPY_AUXDATA_FREE(i32* %129)
  %131 = load i32, i32* @NPY_FAIL, align 4
  store i32 %131, i32* %10, align 4
  br label %135

132:                                              ; preds = %105
  %133 = load i64, i64* @NPY_SUCCEED, align 8
  %134 = trunc i64 %133 to i32
  store i32 %134, i32* %10, align 4
  br label %135

135:                                              ; preds = %132, %124, %97, %88, %50, %45
  %136 = load i32, i32* %10, align 4
  ret i32 %136
}

declare dso_local i64 @get_nbo_cast_transfer_function(i32, i32, i32, %struct.TYPE_12__*, %struct.TYPE_12__*, i32, i32**, i32**, i32*, i32*) #1

declare dso_local i32 @PyArray_GetDTypeCopySwapFn(i32, i32, i32, %struct.TYPE_12__*, i32**, i32**) #1

declare dso_local i32 @PyDataType_REFCHK(%struct.TYPE_12__*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @PyDataType_ISNOTSWAPPED(%struct.TYPE_12__*) #1

declare dso_local i64 @PyArray_GetDTypeTransferFunction(i32, i32, i32, %struct.TYPE_12__*, %struct.TYPE_12__*, i32, i32**, i32**, i32*) #1

declare dso_local i32 @NPY_AUXDATA_FREE(i32*) #1

declare dso_local i64 @wrap_aligned_contig_transfer_function(i32, i32, i32*, i32*, i32*, i32*, i32*, i32*, i32, i32**, i32**) #1

declare dso_local i32 @PyDataType_FLAGCHK(%struct.TYPE_12__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
